--- a/source/photo.html
+++ b/source/photo.html
@@ -46,9 +46,16 @@
   <main class="page-main">
     <h1 class="visually-hidden">Фото и видео Седоны</h1>
 
-    <section class="photo-video">
+    <!-- <section class="photo-video">
       <div class="photo-video__cover">
         <img class="photo-video__inscription" src="img/text-sedona.svg" alt="Надпись Седона" width="100%"
+          height="160px">
+      </div>
+    </section> -->
+
+    <section class="intro-background">
+      <div class="intro-background__cover">
+        <img class="intro-background__inscription" src="img/text-sedona.svg" alt="Надпись Седона" width="100%"
           height="160px">
       </div>
     </section>
