Изменение навигации и добавление рамки.

--- a/source/index.html
+++ b/source/index.html
@@ -59,7 +59,7 @@
                 Главная
               </a>
             </li>
-            <li class="site-list__item">
+            <li class="site-list__item site-list__second-block">
               <a class="site-list__link" href="#">
                 Фото и видео
               </a>
