Подключение Pixel Glass.

--- a/source/index.html
+++ b/source/index.html
@@ -6,9 +6,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>HTML Academy: Седона</title>
   <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/normalize.css">
+  <link rel="stylesheet" href="/css/normalize/normalize.css">
   <!-- Pixel Glass -->
-  <!-- <style>
+  <style>
     HTML {
       background-repeat: no-repeat;
       background-position: 100% 0;
@@ -32,8 +32,8 @@
       }
     }
   </style>
-  <link href="../node_modules/pixel-glass/styles.css" rel="stylesheet">
-  <script src="../node_modules/pixel-glass/script.js"></script> -->
+  <link href="/js/pixel-glass/styles.css" rel="stylesheet">
+  <script src="/js/pixel-glass/script.js"></script>
   <!-- // Pixel Glass -->
 </head>
 
