--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/normalize/normalize.css">
   <!-- Pixel Glass -->
-  <style>
+  <!-- <style>
     HTML {
       background-repeat: no-repeat;
       background-position: 100% 0;
@@ -33,7 +33,7 @@
     }
   </style>
   <link href="/js/pixel-glass/styles.css" rel="stylesheet">
-  <script src="/js/pixel-glass/script.js"></script>
+  <script src="/js/pixel-glass/script.js"></script> -->
   <!-- // Pixel Glass -->
 </head>
 
@@ -43,7 +43,7 @@
       <a class="page-header__logo">
         <img src="img/logo-sedona-mobile.svg" width="102px" height="84px" alt="Логотип Седона">
       </a>
-      <nav class="main-nav main-nav--open">
+      <nav class="main-nav main-nav--opened">
         <button class="main-nav__button main-nav__button--open" type="button">
           <span class="visually-hidden">Открыть меню</span>
 
