--- a/source/index.html
+++ b/source/index.html
@@ -103,11 +103,11 @@
 
       <section class="advantages">
         <h2 class="visually-hidden">Почему стоит выбрать Седону</h2>
-        <div class="advantages__intro inscription">
+        <section class="advantages__intro inscription">
           <p class="inscription__slogan">Седона &ndash; небольшой <br> городок в Аризоне, <br> заслуживающий большего!
           </p>
-          <p class="inscription__text">Рассмотрим 5 причин, по которым Седона круче, чем Гранд Каньон!</p>
-        </div>
+          <p class="inscription__text">Рассмотрим 5 причин, по которым <br> Седона круче, чем Гранд Каньон!</p>
+        </section>
         <div class="advantages__wrapper">
           <ul class="advantages__list">
 
@@ -151,7 +151,7 @@
                   </svg>
                   <div class="facilities__text-house">
                     <h4 class="facilities__title">Жилье</h4>
-                    <p class="facilities__slogan">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
+                    <p class="facilities__slogan">Рекомендуем пожить в <br> настоящем мотеле, все как в <br> кино!</p>
                   </div>
                 </div>
               </li>
@@ -166,7 +166,7 @@
                   </svg>
                   <div class="facilities__text-gift">
                     <h4 class="facilities__title">Сувениры</h4>
-                    <p class="facilities__slogan">Не только китайского, но и местного производства!</p>
+                    <p class="facilities__slogan">Не только китайского, но и <br> местного производства!</p>
                   </div>
                 </div>
               </li>
@@ -190,7 +190,7 @@
                   </svg>
                   <div class="facilities__text-burger">
                     <h4 class="facilities__title">Еда</h4>
-                    <p class="facilities__slogan">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
+                    <p class="facilities__slogan">Всегда заказывайте <br> фирменный бургер, вы не разочаруетесь!</p>
                   </div>
                 </div>
               </li>
