--- a/source/photo.html
+++ b/source/photo.html
@@ -13,7 +13,11 @@
   <div class="page__container">
     <header class="page-header">
       <a class="page-header__logo">
-        <img src="img/logo-sedona-mobile.svg" width="102px" height="84px" alt="Логотип Седона">
+        <picture>
+          <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
+          <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
+          <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="Логотип Седона">
+        </picture>
       </a>
       <nav class="main-nav main-nav--opened">
         <button class="main-nav__button main-nav__button--open" type="button">
@@ -66,17 +70,11 @@
     <main class="page-main">
       <h1 class="visually-hidden">Фото и видео Седоны</h1>
 
-      <!-- <section class="photo-video">
-      <div class="photo-video__cover">
-        <img class="photo-video__inscription" src="img/text-sedona.svg" alt="Надпись Седона" width="100%"
-          height="160px">
-      </div>
-    </section> -->
 
       <section class="intro-background">
         <div class="intro-background__cover">
-          <img class="intro-background__inscription" src="img/text-sedona.svg" alt="Надпись Седона" width="100%"
-            height="160px">
+          <img class="intro-background__inscription" src="img/text-sedona.svg" alt="Надпись Седона" width="229"
+            height="39">
         </div>
       </section>
 
@@ -93,11 +91,16 @@
           <div class="cards-section__square vast-card">
             <div class="cards-section__photo vast-card__photo">
               <a href="img/photo-sunset-mobile@1x.jpg">
-                <picture>
-                  <source media="(min-width: 768px)" srcset="img/photo-sunset-tablet@1x.jpg">
-                  <img class="card-photo" src="img/photo-sunset-mobile@1x.jpg" alt="Закат в Седоне" width="280px"
-                    height="280px">
-                </picture>
+                <p class="vast-card__img-wrapper">
+                  <picture>
+                    <source media="(min-width: 1200px)"
+                      srcset="img/photo-sunset-desktop@1x.jpg 1x, img/photo-sunset-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
+                    <img class="vast-card__image" src="img/photo-sunset-mobile@1x.jpg"
+                      srcset="img/photo-sunset-mobile@2x.jpg 2x" alt="Закат в Седоне" width="280" height="280">
+                  </picture>
+                </p>
               </a>
             </div>
 
@@ -108,7 +111,7 @@
               </div>
 
               <div class="cards-section__review vast-card__review">
-                <svg class="cards-section__icon vast-card__like-icon" version="1.0" id="Layer_1"
+                <!-- <svg class="cards-section__icon vast-card__like-icon" version="1.0" id="Layer_1"
                   xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                   width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                   <g id="Page-1">
@@ -119,7 +122,7 @@
                       </g>
                     </g>
                   </g>
-                </svg>
+                </svg> -->
                 <p class="cards-section__like-count vast-card__like-count">1350</p>
               </div>
             </div>
@@ -129,8 +132,16 @@
           <div class="cards-section__square plants-card">
             <div class="cards-section__photo plants-card__photo">
               <a href="img/photo-cactus-mobile@1x.jpg">
-                <img class="card-photo" src="img/photo-cactus-mobile@1x.jpg" alt="Фото кактуса" width="280px"
-                  height="280px">
+                <p class="plants-card__img-wrapper">
+                  <picture>
+                    <source media="(min-width: 1200px)"
+                      srcset="img/photo-cactus-desktop@1x.jpg 1x, img/photo-cactus-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
+                    <img class="photo-cactus__image" src="img/photo-cactus-mobile@1x.jpg"
+                      srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Фото кактуса" width="280" height="280">
+                  </picture>
+                </p>
               </a>
             </div>
             <div class="cards-section__content plants-card__content">
@@ -139,7 +150,7 @@
                 <span class="plants-card__author card-author-name">Автор фото: Сергей</span>
               </div>
               <div class="cards-section__review plants-card__review card-review">
-                <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <!-- <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
                   viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                   <g id="Page-1">
@@ -150,7 +161,7 @@
                       </g>
                     </g>
                   </g>
-                </svg>
+                </svg> -->
                 <p class="cards-section__like-count">143</p>
               </div>
             </div>
@@ -160,8 +171,16 @@
           <div class="cards-section__square road-card">
             <div class="cards-section__photo road-card__photo">
               <a href="img/photo-roads-mobile@1x.jpg">
-                <img class="card__photo" src="img/photo-roads-mobile@1x.jpg" alt="Фото дорога" width="280px"
-                  height="280px">
+                <p class="road-card__img-wrapper">
+                  <picture>
+                    <source media="(min-width: 1200px)"
+                      srcset="img/photo-roads-desktop@1x.jpg 1x, img/photo-roads-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
+                    <img class="road-card__image" src="img/photo-roads-mobile@1x.jpg"
+                      srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Фото дорога" width="280" height="280">
+                  </picture>
+                </p>
               </a>
             </div>
             <div class="cards-section__content road-card__content">
@@ -170,7 +189,7 @@
                 <span class="road-card__author card-author-name">Автор фото: Петр</span>
               </div>
               <div class="cards-section__review road-card__review">
-                <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <!-- <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
                   viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                   <g id="Page-1">
@@ -181,7 +200,7 @@
                       </g>
                     </g>
                   </g>
-                </svg>
+                </svg> -->
                 <p class="cards-section__like-count">96</p>
               </div>
             </div>
@@ -191,8 +210,16 @@
           <div class="cards-section__square bridge-card">
             <div class="cards-section__photo bridge-card__photo">
               <a href="img/main-bridge-mobile@1x.jpg">
-                <img class="card__photo" src="img/main-bridge-mobile@1x.jpg" alt="Фото моста дьявола" width="280px"
-                  height="280px">
+                <p class="bridge-card__img-wrapper">
+                  <picture>
+                    <source media="(min-width: 1200px)"
+                      srcset="img/main-bridge-desktop@1x.jpg 1x, img/main-bridge-desktop@2x.jpg 2x">
+                    <source media="(min-width: 768px)"
+                      srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
+                    <img class="bridge-card__image" src="img/main-bridge-mobile@1x.jpg"
+                      srcset="img/main-bridge-mobile@2x.jpg 2x" alt="Фото моста дьявола" width="280" height="280">
+                  </picture>
+                </p>
               </a>
             </div>
             <div class="cards-section__content bridge-card__content">
@@ -201,7 +228,7 @@
                 <span class="bridge-card__author card-author-name">Автор фото: Антон</span>
               </div>
               <div class="cards-section__review bridge-card__review">
-                <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                <!-- <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
                   xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
                   viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
                   <g id="Page-1">
@@ -212,7 +239,7 @@
                       </g>
                     </g>
                   </g>
-                </svg>
+                </svg> -->
                 <p class="cards-section__like-count">254</p>
               </div>
             </div>
