--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,7 @@
 <body class="page__body">
   <div class="page__container">
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <img src="img/logo-sedona-mobile.svg" alt="Логотип Седона">
       </a>
       <nav class="main-nav">
