--- a/source/photo.html
+++ b/source/photo.html
@@ -12,11 +12,11 @@
 <body class="page__body">
   <div class="page__container">
     <header class="page-header">
-      <a class="page-header__logo">
+      <a class="page-header__logo" href="index.html">
         <picture>
           <source media="(min-width: 1200px)" srcset="img/logo-sedona-desktop.svg">
           <source media="(min-width: 768px)" srcset="img/logo-sedona-tablet.svg">
-          <img src="img/logo-sedona-mobile.svg" width="102" height="84" alt="Логотип Седона">
+          <img src="img/logo-sedona-mobile.svg" alt="Логотип Седона">
         </picture>
       </a>
       <nav class="main-nav main-nav--opened">
@@ -98,7 +98,7 @@
                     <source media="(min-width: 768px)"
                       srcset="img/photo-sunset-tablet@1x.jpg 1x, img/photo-sunset-tablet@2x.jpg 2x">
                     <img class="vast-card__image" src="img/photo-sunset-mobile@1x.jpg"
-                      srcset="img/photo-sunset-mobile@2x.jpg 2x" alt="Закат в Седоне" width="280" height="280">
+                      srcset="img/photo-sunset-mobile@2x.jpg 2x" alt="Закат в Седоне">
                   </picture>
                 </p>
               </a>
@@ -139,7 +139,7 @@
                     <source media="(min-width: 768px)"
                       srcset="img/photo-cactus-tablet@1x.jpg 1x, img/photo-cactus-tablet@2x.jpg 2x">
                     <img class="photo-cactus__image" src="img/photo-cactus-mobile@1x.jpg"
-                      srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Фото кактуса" width="280" height="280">
+                      srcset="img/photo-cactus-mobile@2x.jpg 2x" alt="Фото кактуса">
                   </picture>
                 </p>
               </a>
@@ -178,7 +178,7 @@
                     <source media="(min-width: 768px)"
                       srcset="img/photo-roads-tablet@1x.jpg 1x, img/photo-roads-tablet@2x.jpg 2x">
                     <img class="road-card__image" src="img/photo-roads-mobile@1x.jpg"
-                      srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Фото дорога" width="280" height="280">
+                      srcset="img/photo-roads-mobile@2x.jpg 2x" alt="Фото дорога">
                   </picture>
                 </p>
               </a>
@@ -217,7 +217,7 @@
                     <source media="(min-width: 768px)"
                       srcset="img/main-bridge-tablet@1x.jpg 1x, img/main-bridge-tablet@2x.jpg 2x">
                     <img class="bridge-card__image" src="img/main-bridge-mobile@1x.jpg"
-                      srcset="img/main-bridge-mobile@2x.jpg 2x" alt="Фото моста дьявола" width="280" height="280">
+                      srcset="img/main-bridge-mobile@2x.jpg 2x" alt="Фото моста дьявола">
                   </picture>
                 </p>
               </a>
