--- a/source/photo.html
+++ b/source/photo.html
@@ -111,18 +111,6 @@
               </div>
 
               <div class="cards-section__review vast-card__review">
-                <!-- <svg class="cards-section__icon vast-card__like-icon" version="1.0" id="Layer_1"
-                  xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-                  width="22px" height="20px" viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
-                  <g id="Page-1">
-                    <g id="Core" transform="translate(-295.000000, -464.000000)">
-                      <g id="thumb-up" transform="translate(295.000000, 464.000000)">
-                        <path id="Shape" fill="#000000"
-                          d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
-                      </g>
-                    </g>
-                  </g>
-                </svg> -->
                 <p class="cards-section__like-count vast-card__like-count">1350</p>
               </div>
             </div>
@@ -150,18 +138,6 @@
                 <span class="plants-card__author card-author-name">Автор фото: Сергей</span>
               </div>
               <div class="cards-section__review plants-card__review card-review">
-                <!-- <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
-                  viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
-                  <g id="Page-1">
-                    <g id="Core" transform="translate(-295.000000, -464.000000)">
-                      <g id="thumb-up" transform="translate(295.000000, 464.000000)">
-                        <path id="Shape" fill="#000000"
-                          d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
-                      </g>
-                    </g>
-                  </g>
-                </svg> -->
                 <p class="cards-section__like-count">143</p>
               </div>
             </div>
@@ -189,18 +165,6 @@
                 <span class="road-card__author card-author-name">Автор фото: Петр</span>
               </div>
               <div class="cards-section__review road-card__review">
-                <!-- <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
-                  viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
-                  <g id="Page-1">
-                    <g id="Core" transform="translate(-295.000000, -464.000000)">
-                      <g id="thumb-up" transform="translate(295.000000, 464.000000)">
-                        <path id="Shape" fill="#000000"
-                          d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
-                      </g>
-                    </g>
-                  </g>
-                </svg> -->
                 <p class="cards-section__like-count">96</p>
               </div>
             </div>
@@ -228,18 +192,6 @@
                 <span class="bridge-card__author card-author-name">Автор фото: Антон</span>
               </div>
               <div class="cards-section__review bridge-card__review">
-                <!-- <svg class="cards-section__icon" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="22px" height="20px"
-                  viewBox="0 0 22 20" enable-background="new 0 0 22 20" xml:space="preserve">
-                  <g id="Page-1">
-                    <g id="Core" transform="translate(-295.000000, -464.000000)">
-                      <g id="thumb-up" transform="translate(295.000000, 464.000000)">
-                        <path id="Shape" fill="#000000"
-                          d="M12.383,3.646l-0.637,2.929L11.219,9H13.7h6.2v2c0,0.018,0,0.037,0.001,0.058L17,18H8V8.029 l0.014-0.015L12.383,3.646 M2,10v8V10 M13.2,0L6.6,6.6C6.2,6.9,6,7.4,6,8v10c0,1.1,0.9,2,2,2h9c0.8,0,1.5-0.5,1.8-1.2l3-7.1 C21.9,11.5,21.9,11.2,21.9,11V9H22c0-1.1-0.9-2-2-2h-6.3l1-4.6V2.1c0-0.4-0.2-0.8-0.4-1.1L13.2,0L13.2,0z M4,8H0v12h4V8L4,8z M22,9c0,0.033,0,0.044,0,0.044V9L22,9z" />
-                      </g>
-                    </g>
-                  </g>
-                </svg> -->
                 <p class="cards-section__like-count">254</p>
               </div>
             </div>
@@ -254,9 +206,33 @@
           <p class="intro-video__text">Смотрите видеопрезентацию и скорее за билетами,
             пока они не подорожали в очередной раз!</p>
         </div>
+
         <div class="intro-video__view">
-          <img class="intro-video__view-back" src="../img/video-mobile@1x.jpg" alt="Видеопрезентация" width="320px"
-            height="201px">
+          <p class="intro-video__wrapper">
+            <picture>
+              <source media="(min-width: 1200px)"
+                srcset="../img/video-desktop@1x.jpg 1x, ../img/video-desktop@2x.jpg 2x">
+              <source media="(min-width: 768px)" srcset="../img/video-tablet@1x.jpg 1x, img/video-tablet@2x.jpg 2x">
+              <img class="video-image" src="../img/video-mobile@1x.jpg" srcset="../img/video-mobile@2x.jpg 2x"
+                alt="Видеопрезентация">
+            </picture>
+          </p>
+
+          <div class="intro-video__player player">
+            <div class="player__timeline timeline">
+              <div class="timeline__bar"></div>
+              <div class="timeline__seek"></div>
+            </div>
+            <p class="player__button-replay">
+              <img src="../img/icon-video-replay.svg" alt="Начать видео сначала" width="16" height="20">
+            </p>
+            <p class="player__button-subtitles">
+              <img src="../img/icon-video-subtitles.svg" alt="Включить субтитры" width="32" height="20">
+            </p>
+            <p class="player__button-fullscreen">
+              <img src="../img/icon-video-fullscreen.svg" alt="Открыть на весь экран" width="20" height="20">
+            </p>
+          </div>
         </div>
       </section>
 
