--- a/source/index.html
+++ b/source/index.html
@@ -75,7 +75,7 @@
                 Главная
               </a>
             </li>
-            <li class="site-list__item site-list__second-block">
+            <li class="site-list__item">
               <a class="site-list__link" href="#">
                 Фото и видео
               </a>
