Стили для блоков страницы form.html

--- a/source/form.html
+++ b/source/form.html
@@ -89,7 +89,7 @@
 
         <fieldset class="review-form__fieldset introduce-fieldset">
           <div class="introduce-fieldset__section">
-            <legend class="introduce-fieldset__legend">Представьтесь:</legend>
+            <h2 class="introduce-fieldset__title">Представьтесь:</h2>
             <div class="introduce-fieldset__first-name first-name">
               <label class="first-name__label" for="first-name">Имя*:</label>
               <input class="first-name__input" type="text" name="first-name" id="first-name" value="Петр" required>
@@ -109,7 +109,7 @@
 
         <fieldset class="review-form__fieldset contacts-fieldset">
 
-          <legend сlass="contacts-fieldset__legend">Контактная информация:</legend>
+          <h2 сlass="contacts-fieldset__title">Контактная информация:</h2>
 
           <div class="contacts-fieldset__phone phone">
             <label class="phone__label" for="phone">Контактный телефон*:</label>
@@ -150,7 +150,7 @@
         </fieldset>
 
         <fieldset class="review-form__fieldset impressions-fieldset">
-          <legend сlass="impressions-fieldset__legend">Ваше общее впечатление:</legend>
+          <h2 class="impressions-fieldset__title">Ваше общее впечатление:</h2>
           <ul class="impressions-fieldset__choices">
             <li class="impressions-fieldset__choice impression-choice">
               <input class="impression-choice__input visually-hidden" type="radio" id="rather-like" name="opinion"
@@ -172,8 +172,7 @@
         </fieldset>
 
         <fieldset class="review-form__fieldset places-fieldset">
-          <legend class="places-fieldset__legend">Посещенные достопримечательности</legend>
-
+          <h2 class="places-fieldset__title">Посещенные <br>достопримечательности</h2>
 
           <ul class="places-fieldset__choices">
 
@@ -205,7 +204,7 @@
         </fieldset>
 
         <fieldset class="review-form__fieldset comments-fieldset">
-          <legend class="comments-fieldset__legend">Опишите свои эмоции</legend>
+          <h2 class="comments-fieldset__title">Опишите свои эмоции:</h2>
           <textarea class="comments-fieldset__input" name="comment">Опишите подробно все свои восторги</textarea>
         </fieldset>
 
