--- a/source/form.html
+++ b/source/form.html
@@ -108,8 +108,7 @@
         </fieldset>
 
         <fieldset class="review-form__fieldset contacts-fieldset">
-
-          <h2 сlass="contacts-fieldset__title">Контактная информация:</h2>
+          <h2 class="contacts-fieldset__title">Контактная информация:</h2>
 
           <div class="contacts-fieldset__phone phone">
             <label class="phone__label" for="phone">Контактный телефон*:</label>
@@ -172,7 +171,7 @@
         </fieldset>
 
         <fieldset class="review-form__fieldset places-fieldset">
-          <h2 class="places-fieldset__title">Посещенные <br>достопримечательности</h2>
+          <h2 class="places-fieldset__title">Посещенные <br>достопримечательности:</h2>
 
           <ul class="places-fieldset__choices">
 
