--- a/source/form.html
+++ b/source/form.html
@@ -110,42 +110,47 @@
         <fieldset class="review-form__fieldset contacts-fieldset">
           <h2 class="contacts-fieldset__title">Контактная информация:</h2>
 
-          <div class="contacts-fieldset__phone phone">
-            <label class="phone__label" for="phone">Контактный телефон*:</label>
+          <section class="contacts-fieldset__section">
+            <div class="contacts-fieldset__phone phone">
+              <label class="phone__label" for="phone"><span>Контактный</span> телефон*:
+              </label>
 
-            <div class="phone__input-block phone-block">
-              <input class="phone-block__input" type="tel" name="phone" id="phone" value="Введите телефон" required>
+              <div class="phone__input-block phone-block">
+                <input class="phone-block__input" type="tel" name="phone" id="phone" value="Введите телефон" required>
 
-              <div class="phone-block__icon">
-                <svg class="phone-block__svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="18px" height="18px"
-                  viewbox="0 0 18 18" enable-background="new 0 0 18 18" xml:space="preserve">
-                  <g id="Page-1">
-                    <g id="Icons-Communication" transform="translate(-85.000000, -126.000000)">
-                      <g id="phone" transform="translate(85.000000, 126.000000)">
-                        <path id="Shape" fill="#010101"
-                          d="M3.6,7.8C5,10.6,7.4,12.9,10.2,14.4l2.2-2.2c0.3-0.3,0.699-0.4,1-0.2c1.1,0.4,2.3,0.6,3.6,0.6 c0.6,0,1,0.4,1,1V17c0,0.6-0.4,1-1,1C7.6,18,0,10.4,0,1c0-0.6,0.4-1,1-1h3.5c0.6,0,1,0.4,1,1c0,1.2,0.2,2.4,0.6,3.6 c0.1,0.3,0,0.7-0.2,1L3.6,7.8L3.6,7.8z" />
+                <div class="phone-block__icon">
+                  <svg class="phone-block__svg" version="1.0" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="18px" height="18px"
+                    viewbox="0 0 18 18" enable-background="new 0 0 18 18" xml:space="preserve">
+                    <g id="Page-1">
+                      <g id="Icons-Communication" transform="translate(-85.000000, -126.000000)">
+                        <g id="phone" transform="translate(85.000000, 126.000000)">
+                          <path id="Shape" fill="#010101"
+                            d="M3.6,7.8C5,10.6,7.4,12.9,10.2,14.4l2.2-2.2c0.3-0.3,0.699-0.4,1-0.2c1.1,0.4,2.3,0.6,3.6,0.6 c0.6,0,1,0.4,1,1V17c0,0.6-0.4,1-1,1C7.6,18,0,10.4,0,1c0-0.6,0.4-1,1-1h3.5c0.6,0,1,0.4,1,1c0,1.2,0.2,2.4,0.6,3.6 c0.1,0.3,0,0.7-0.2,1L3.6,7.8L3.6,7.8z" />
+                        </g>
                       </g>
                     </g>
-                  </g>
-                </svg>
+                  </svg>
+                </div>
               </div>
             </div>
-          </div>
-          <div class="contacts-fieldset__email email">
-            <label class="email__label" for="email">Электронная почта*:</label>
-            <div class="email__input-block email-block">
-              <input class="email-block__input" type="email" id="email" name="email" value="Введите e-mail">
-              <div class="email-block__icon">
-                <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg"
-                  xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px"
-                  viewbox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
-                  <path
-                    d="M8,10c-0.266,0-0.5-0.094-1-0.336L0,6v7c0,0.55,0.45,1,1,1h14c0.55,0,1-0.45,1-1V6L9,9.664C8.5,9.906,8.266,10,8,10z M15,2 H1C0.45,2,0,2.45,0,3v0.758l8,4.205l8-4.205V3C16,2.45,15.55,2,15,2z" />
-                </svg>
+
+            <div class="contacts-fieldset__email email">
+              <label class="email__label" for="email">Электронная почта*:</label>
+
+              <div class="email__input-block email-block">
+                <input class="email-block__input" type="email" id="email" name="email" value="Введите e-mail">
+                <div class="email-block__icon">
+                  <svg version="1.1" id="Layer_3" xmlns="http://www.w3.org/2000/svg"
+                    xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="16px" height="16px"
+                    viewbox="0 0 16 16" enable-background="new 0 0 16 16" xml:space="preserve">
+                    <path
+                      d="M8,10c-0.266,0-0.5-0.094-1-0.336L0,6v7c0,0.55,0.45,1,1,1h14c0.55,0,1-0.45,1-1V6L9,9.664C8.5,9.906,8.266,10,8,10z M15,2 H1C0.45,2,0,2.45,0,3v0.758l8,4.205l8-4.205V3C16,2.45,15.55,2,15,2z" />
+                  </svg>
+                </div>
               </div>
             </div>
-          </div>
+          </section>
         </fieldset>
 
         <fieldset class="review-form__fieldset impressions-fieldset">
@@ -208,6 +213,10 @@
         </fieldset>
 
         <input class="review-form__submit-button" type="submit" value="Отправить отзыв">
+
+        <div>
+          <span>*&mdash;обязательные поля</span>
+        </div>
       </form>
 
     </main>
