Изменения по PixelPerfect form.html.

--- a/source/form.html
+++ b/source/form.html
@@ -215,7 +215,7 @@
         <input class="review-form__submit-button" type="submit" value="Отправить отзыв">
 
         <div>
-          <span>*&mdash;обязательные поля</span>
+          <span class="review-form__text-requared">*&mdash;обязательные поля</span>
         </div>
       </form>
 
